	* vm_trace.c (rb_threadptr_exec_event_hooks): get rid of race 	  condition. [Bug #7589] [ruby-dev:46763]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38464 b2dd03c8-39d4-4d8f-98ff-823fe69b080e